se actualiza el proyecto

--- a/Index/Index.html
+++ b/Index/Index.html
@@ -10,7 +10,7 @@
     <h1> Los 5 mejores sitios de Jujuy</h1>
     <p>Si estas por la provincia y queres disfrutar al maximo, ¡no podes perderte estas locaciones!</p> 
 
-    <a href="http://127.0.0.1:5500/TP%201%20MEJORES%20SITIOS/Sitios%20de%20Jujuy/5MejoresSitios.html">¡Hace click acá para darles un vistazo!</a>
+    <a href="http://127.0.0.1:5500/proyecto_html_Dantuene_Mateo_Benjamin/Sitios/Sitios.html">¡Hace click acá para darles un vistazo!</a>
    <p></p> 
     <img src="./img/Cerro_de_los_siete_colores.JPG" alt="">
 </body>
